syntax = "proto3";

package configure;
option go_package = "./v1;v1";
import "validate/validate.proto";
import "configure_server.proto";
import "configure_resource.proto";



message AllResourceServerRequest{
    int64 resource_id = 1[(validate.rules).int64.gt = 0];
}

message AllResourceServerReply {
  message ResourceServer{
    int64 resource_id = 1;
    int64 server_id = 2;
    int64 created_at = 3;
    Server server = 4;
  }
  repeated ResourceServer list = 1;
}


message AllServerResourceRequest{
  int64 server_id = 1 [(validate.rules).int64.gt = 0];
}

message AllServerResourceReply {
  message ResourceServer{
    int64 resource_id = 1;
    int64 server_id = 2;
    Resource resource=3;
  }
  repeated ResourceServer list = 1;
}

// 新增环境
message AddResourceServerRequest {
  int64 resource_id = 1[(validate.rules).int64 = {gt: 0}];
  int64 server_id = 2[(validate.rules).int64 = {gt: 0}];
}

// 删除环境
message DeleteResourceServerRequest {
  int64 id = 1 [(validate.rules).int64 = {gt: 0}];
}
